# backend

./: .env.example  .gitignore  README.md  api_docs.csv  env.example  main.py  pyproject.toml  schemas.py
app/: env  main.py
app/api/: router.py
app/api/routes/: emails.py  feedback.py  keywords.py  security.py
app/core/: config.py
app/data/: security_baseline.json
app/db/: base.py  init_db.py
app/models/: email.py  keyword.py
app/schemas/: email.py  keyword.py
app/services/: email_analyzer.py  feedback_retriever.py  feedback_service.py  gemini_client.py  rag_context_retriever.py  security_baseline.py  security_detector.py  text_normalizer.py
daily_mail_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
eval/: CODEX_HARNESS_PROMPT.md  email_cases.jsonl  run_email_eval.py
routers/: analyze.py  keywords.py  mails.py
services/: gemini.py
tests/: test_email_routes.py  test_gemini_fallback.py  test_security_baseline.py  test_security_detector.py  test_text_normalizer.py
