[project]
name = "daily-mail-backend"
version = "0.1.0"
description = "AI-powered security-focused email agent backend for DailyMail."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    "google-genai>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["eval*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
